# ethrex

./: 404.html  CLI.html  CNAME  CONTRIBUTING_DOCS.html  Cargo.toml  index.html  lectures.html  print.html  roadmap.html  searchindex.js  toc.html  toc.js
.cargo/: config.toml
cmd/ethrex/: Cargo.toml  cli.rs  ethrex.rs  initializers.rs
cmd/ethrex/l2/: command.rs  initializers.rs
crate_reviews/toolkit/: analyze_crate.py  linkify_report_refs.py
crates/blockchain/: Cargo.toml  blockchain.rs
crates/common/trie/: nibbles.rs
crates/common/types/: account.rs
crates/storage/: lib.rs  store.rs
crates/storage/backend/: rocksdb.rs
crates/vm/: Cargo.toml
crates/vm/backends/levm/: db.rs  mod.rs
crates/vm/levm/: Cargo.toml
crates/vm/levm/bench/revm_comparison/: Cargo.toml
crates/vm/levm/bench/revm_comparison/src/: benchmark.rs
crates/vm/levm/benches/: optimizations_bench.rs
crates/vm/levm/src/: call_frame.rs  lib.rs  precompiles.rs  prefetch.rs  vm.rs
crates/vm/levm/src/db/: gen_db.rs
crates/vm/levm/src/hooks/: l2_hook.rs
crates/vm/levm/src/opcode_handlers/: stack_memory_storage_flow.rs  system.rs
developers/: index.html  installing.html  release-process.html  rich-accounts.html
developers/l1/: dashboards.html  dev-mode.html  importing-blocks.html  introduction.html  kurtosis-localnet.html  metrics.html  storage_api.html
developers/l1/testing/: README.html  assertoor.html  ef-tests.html  hive.html  index.html  load-tests.html  rust.html
developers/l2/: dev-mode.html  integration-tests.html  introduction.html  prover.html  state-reconstruction-blobs.html
ethrex_replay/: ethrex_replay.html  faq.html
getting-started/: hardware_requirements.html  index.html
getting-started/installation/: README.html  binary_distribution.html  building_from_source.html  docker_images.html  index.html  package_manager.html
internal/l1/: delete_accounts.html  healing.html  sorted_trie_insert.html
l1/architecture/: block_execution.html  crate_map.html  index.html  overview.html  sync_state_machine.html
l1/fundamentals/: databases.html  index.html  networking.html  snap_sync.html  snap_sync_concerns.html  sync_modes.html
l1/running/: README.html  configuration.html  consensus_client.html  index.html  monitoring.html  startup.html
l2/: admin.html  introduction.html  monitoring.html  stages.html
l2/architecture/: README.html  index.html  overview.html  prover.html  sequencer.html  tdx.html
l2/deployment/: aligned.html  based.html  fee_token.html  index.html  overview.html  shared_bridge.html  synchronous_composability_poc.html  upgrades.html  validium.html  vanilla.html
l2/deployment/prover/: index.html  multi-prover.html  overview.html  risc0.html  sp1.html  tee.html
l2/fundamentals/: README.html  based.html  block_vs_state_diff_measurements.html  contracts.html  data_availability.html  deposits.html  ethrex_l2_aligned_integration.html  execution_witness.html  execution_witness_measurements.html  exit_window.html  fee_token.html  index.html  shared_bridge.html  state_diffs.html  timelock.html  transaction_fees.html  withdrawals.html
l2/interacting/: blockscout.html  deploy_contracts.html  deposit.html  index.html  l2_hub.html  shared_bridge.html  wallet.html  withdraw.html
prover/: guest_program.html  prover.html
scripts/: pgo-build.sh
tooling/ef_tests/state/: Cargo.toml
tooling/ef_tests/state/tests/: all.rs
vm/levm/: debug.html
