[workspace]
members = [
  "benches",
  "cmd/ethrex",
  "crates/blockchain",
  "crates/blockchain/dev",
  "crates/common",
  "crates/common/rlp",
  "crates/common/trie",
  "crates/common/crypto",
  "crates/l2/",
  "crates/l2/common",
  "crates/l2/prover",
  "crates/l2/prover/src/guest_program",
  "crates/l2/sdk",
  "crates/l2/sdk/contract_utils",
  "crates/l2/storage",
  "crates/l2/networking/rpc",
  "crates/networking/p2p",
  "crates/networking/rpc",
  "crates/storage",
  "crates/vm",
  "crates/vm/levm",
  "crates/vm/levm/runner",
  "crates/common/config",
  "crates/concurrency",
]
exclude = ["crates/vm/levm/bench/revm_comparison"]
resolver = "2"

default-members = ["cmd/ethrex"]

[workspace.package]
version = "8.0.0"
edition = "2024"
authors = ["LambdaClass"]
documentation = "https://docs.ethrex.xyz"

[profile.dev]
debug = 2

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.release-with-debug]
inherits = "release"
debug = 2

[workspace.dependencies]
ethrex-blockchain = { path = "./crates/blockchain", default-features = false }
ethrex-common = { path = "./crates/common", default-features = false }
ethrex-config = { path = "./crates/common/config" }
ethrex-p2p = { path = "./crates/networking/p2p" }
ethrex-rpc = { path = "./crates/networking/rpc" }
ethrex-storage = { path = "./crates/storage" }
ethrex-vm = { path = "./crates/vm", default-features = false }
ethrex-levm = { path = "./crates/vm/levm" }
ethrex-trie = { path = "./crates/common/trie" }
ethrex-rlp = { path = "./crates/common/rlp" }
ethrex-crypto = { path = "./crates/common/crypto" }
ethrex-metrics = { path = "./crates/blockchain/metrics" }
ethrex-l2 = { path = "./crates/l2" }
ethrex-l2-common = { path = "./crates/l2/common" }
ethrex-sdk = { path = "./crates/l2/sdk" }
ethrex-prover = { path = "./crates/l2/prover" }
ethrex-storage-rollup = { path = "./crates/l2/storage" }
ethrex = { path = "./cmd/ethrex" }
ethrex-l2-rpc = { path = "./crates/l2/networking/rpc" }
ethrex-threadpool = { path = "./crates/concurrency" }

tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }

async-trait = "0.1.88"
ethereum-types = { version = "0.15.1", features = ["serialize"] }
serde = { version = "1.0.203", features = ["derive", "rc"] }
serde_with = "3.11.0"
serde_json = "1.0.117"
bytes = { version = "1.6.0", features = ["serde"] }
tokio = { version = "1.41.1", default-features = false }
thiserror = "2.0.9"
hex = "0.4.3"
hex-literal = "0.4.1"
crc32fast = "1.4.2"
lazy_static = "1.5.0"
sha2 = "0.10.9"
sha3 = "0.10.8"
tokio-util = { version = "0.7.15", features = ["rt"] }
jsonwebtoken = "9.3.0"
rand = "0.8.5"
reqwest = { version = "0.12.7", features = ["socks", "json"] }
rustc-hash = "2.1.1"
snap = "1.1.1"
secp256k1 = { version = "0.30.0", default-features = false, features = [
  "global-context",
  "recovery",
  "rand",
] }
axum = { version = "0.8.1" }
clap = { version = "4.3", features = ["derive", "env"] }
clap_complete = "4.5.17"
eyre = "0.6.12"
rustc-hex = "2.1.0"
url = { version = "2.5.4", features = ["serde"] }
kzg-rs = "0.2.6"
libsql = "0.9.10"
futures = "0.3.31"
aligned-sdk = { git = "https://github.com/yetanotherco/aligned_layer", rev = "c60d7eb147edbdf12bb7a7c6e92ec178d9f8da23" }
spawned-concurrency = "0.4.2"
spawned-rt = "0.4.2"
lambdaworks-crypto = "0.13.0"
tui-logger = { version = "0.17.3", features = ["tracing-support"] }
crossbeam = "0.8.4"
rayon = "1.10.0"
rkyv = { version = "0.8.10", features = ["std", "unaligned"] }
tempfile = "3.8"
uuid = { version = "1.18.1", features = ["v4"] }
tower-http = { version = "0.6.2", features = ["cors"] }
indexmap = { version = "2.11.4" }
k256 = "0.13.4"

rocksdb = { version = "0.24.0", default-features = false, features = [
  "bindgen-runtime",
  "lz4",
] }

[workspace.lints.clippy]
redundant_clone = "warn"
