[package]
name = "ethrex-vm"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true

[dependencies]
ethrex-common = { workspace = true, default-features = false }
ethrex-crypto.workspace = true
ethrex-levm = { path = "./levm", default-features = false }
ethrex-trie.workspace = true
ethrex-rlp.workspace = true

derive_more = { version = "1.0.0", features = ["full"] }
bytes.workspace = true
thiserror.workspace = true
lazy_static.workspace = true
tracing.workspace = true
serde.workspace = true
rkyv.workspace = true

bincode = "1"
dyn-clone = "1.0"
parking_lot.workspace = true

ethereum-types.workspace = true

[lib]
path = "./lib.rs"

[features]
default = ["secp256k1"]

secp256k1 = ["ethrex-levm/secp256k1", "ethrex-common/secp256k1"]
c-kzg = ["ethrex-levm/c-kzg", "ethrex-common/c-kzg"]

sp1 = ["ethrex-levm/sp1", "ethrex-common/sp1"]
risc0 = ["ethrex-levm/risc0", "ethrex-common/risc0", "c-kzg"]
zisk = ["ethrex-levm/zisk", "ethrex-common/zisk"]
openvm = ["ethrex-levm/openvm", "ethrex-common/openvm"]
perf_opcode_timings = ["ethrex-levm/perf_opcode_timings"]

debug = ["ethrex-levm/debug"]

[lints.clippy]
unwrap_used = "deny"
redundant_clone = "warn"
