[package]
name = "ethrex-levm"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true

[dependencies]
lazy_static.workspace = true
ethrex-common = { workspace = true, default-features = false }
ethrex-crypto.workspace = true
ethrex-rlp.workspace = true
derive_more = { version = "1.0.0", features = ["full"] }

bytes.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive", "rc"] }
serde_json.workspace = true

datatest-stable = "0.2.9"
walkdir = "2.5.0"
p256 = { version = "0.13.2", features = [
  "ecdsa",
  "arithmetic",
  "expose-field",
] }
sha2 = "0.10.8"
sha3 = "0.10.8"
ripemd = "0.1.3"
malachite = "0.6.1"
lambdaworks-math = "0.13.0"
bls12_381 = { git = "https://github.com/lambdaclass/bls12_381", branch = "expose-fp-struct", features = [
  "groups",
  "bits",
  "pairings",
  "alloc",
  "experimental",
] }
ark-bn254 = "0.5.0"
ark-ec = "0.5.0"
ark-ff = { version = "0.5.0", features = ["asm"] }
strum = { version = "0.27.1", features = ["derive"] }
k256.workspace = true
substrate-bn = { version = "0.6.0", optional = true }
secp256k1 = { workspace = true, optional = true }
ziskos = { git = "https://github.com/0xPolygonHermez/zisk.git", tag = "v0.15.0", optional = true }

bitvec = { version = "1.0.1", features = ["alloc"] }

rustc-hash.workspace = true

[dev-dependencies]
hex.workspace = true
colored = "2.1.0"
spinoff = "0.8.0"
criterion = "0.5"

[[bench]]
name = "optimizations_bench"
harness = false

[features]
default = ["secp256k1"]
secp256k1 = ["dep:secp256k1"]
c-kzg = ["ethrex-common/c-kzg", "ethrex-crypto/c-kzg"]
ethereum_foundation_tests = []
debug = []
sp1 = ["dep:substrate-bn"]
risc0 = ["dep:substrate-bn", "c-kzg"]
zisk = ["dep:substrate-bn", "dep:ziskos"]
openvm = ["ethrex-common/openvm"]
perf_opcode_timings = []

[lints.rust]
unsafe_code = "warn"
warnings = "warn"
rust_2018_idioms = "warn"

[lints.clippy]
panic = "deny"
unnecessary_cast = "warn"
deref_by_slicing = "warn"
indexing_slicing = "warn"
manual_unwrap_or = "warn"
manual_unwrap_or_default = "warn"
as_conversions = "deny"
unwrap_used = "deny"
expect_used = "deny"
redundant_clone = "warn"

arithmetic_side_effects = "deny"
panicking_overflow_checks = "warn"
manual_saturating_arithmetic = "warn"

[lib]
path = "./src/lib.rs"
