[package]
name = "ef_tests-state"
version = "0.1.0"
edition = "2024"
authors = ["LambdaClass"]

[dependencies]
ethrex-blockchain = { path = "../../../crates/blockchain" }
ethrex-common = { path = "../../../crates/common" }
ethrex-storage = { path = "../../../crates/storage" }
ethrex-rlp = { path = "../../../crates/common/rlp" }
ethrex-vm = { path = "../../../crates/vm" }
ethrex-levm = { path = "../../../crates/vm/levm" }

serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
# Since we do heavy parsing of ef tests, simd-json is more than 2x faster than serde_json
simd-json = "0.15.1"
bytes = { version = "1.6.0", features = ["serde"] }
colored = "2.1.0"
spinoff = "0.8.0"
thiserror = "2.0.9"
hex = "0.4.3"
clap = { version = "4.3", features = ["derive", "env"] }
clap_complete = "4.5.17"
itertools = "0.13.0"
revm = { version = "27.0.3", features = [
    "serde",
    "std",
    "serde-json",
    "optional_no_base_fee",
    "optional_block_gas_limit",
], default-features = false }
alloy-rlp = "0.3.12"
tokio = { version = "1.41.1", features = ["full"] }
rayon = "1.10.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
mimalloc = "0.1"

[dev-dependencies]
hex = "0.4.3"

[lib]
path = "./lib.rs"

[features]
default = ["c-kzg"]
c-kzg = ["ethrex-vm/c-kzg", "ethrex-levm/c-kzg", "ethrex-common/c-kzg"]

[[test]]
name = "all"
harness = false

[profile.release-with-debug]
inherits = "release"
debug = 2
