[package]
name = "revm_comparison"
version = "0.1.0"
edition = "2024"
authors = ["LambdaClass"]

[workspace]

[lib]
name = "revm_comparison"
path = "src/lib.rs"

[dependencies]
ethrex-levm = { path = "../../" }
ethrex-vm = { path = "../../.." }
ethrex-common = { path = "../../../../common" }
ethrex-crypto = { path = "../../../../common/crypto" }
ethrex-storage = { path = "../../../../storage" }
ethrex-blockchain = { path = "../../../../blockchain" }
rustc-hash = "2.1.1"
hex = "0.4.3"
bytes = { version = "1.6.0", features = ["serde"] }

revm = "9.0.0"
mimalloc = { version = "0.1", optional = true }
snmalloc-rs = { version = "0.3", optional = true }

[features]
default = []
mimalloc = ["dep:mimalloc"]
snmalloc = ["dep:snmalloc-rs"]

[[bin]]
name = "compile"
path = "src/compile.rs"

[[bin]]
name = "benchmark"
path = "src/benchmark.rs"
